--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,16 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
   margin-left: 50px;
+  background-color: ;
 }
 
 a {
-  color: #149ddd;
+  color: #ffcccc;
   text-decoration: none;
 }
 
 a:hover {
-  color: #37b3ed;
+  color: #ffcccc;
   text-decoration: none;
 }
 
@@ -34,7 +35,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+  background: #ffcccc;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -43,12 +44,13 @@ h6 {
 
 .back-to-top i {
   font-size: 28px;
+  
   color: #fff;
   line-height: 0;
 }
 
 .back-to-top:hover {
-  background: #2eafec;
+  background: #ffcccc;
   color: #fff;
 }
 
@@ -70,7 +72,7 @@ h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: rgba(49, 25, 19);
   overflow-y: auto;
   margin-left: 80px;
 }
@@ -79,7 +81,6 @@ h6 {
   margin: 15px auto;
   display: block;
   width: 120px;
-  //border: 8px solid #2c2f3f;
 }
 
 #header .profile h1 {
@@ -114,7 +115,7 @@ h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #149ddd;
+  background: #ffcccc;
   color: #fff;
   text-decoration: none;
 }
@@ -182,7 +183,7 @@ h6 {
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #149ddd;
+  color: #ffcccc;
 }
 
 /* Mobile Navigation */
@@ -195,7 +196,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #149ddd;
+  background-color: #ffcccc;
   color: #fff;
   width: 40px;
   height: 40px;
@@ -230,7 +231,10 @@ h6 {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
+  margin-left: 50%;
+  margin-right: 50%;
   bottom: 0;
+  width: ;
   top: 0;
   left: 0;
   right: 0;
@@ -245,6 +249,8 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
+  font-family: 'Noto Serif TC', serif;
+  font-family: 'Reenie Beanie', cursive;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -262,7 +268,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #ffcccc;
 }
 
 @media (min-width: 1024px) {
@@ -323,6 +329,12 @@ section {
 
 .section-title p {
   margin-bottom: 0;
+  font-size: ;
+  font-family: ;
+}
+
+.section-title-skill{
+  padding-bottom: 5px;
 }
 
 /*--------------------------------------------------------------
@@ -352,7 +364,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #149ddd;
+  color: #ffcccc;
   line-height: 0;
 }
 
@@ -375,7 +387,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #149ddd;
+  color: #ffcccc;
   float: left;
   line-height: 0;
 }
@@ -445,7 +457,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #149ddd;
+  background-color: #ffcccc;
 }
 
 /*--------------------------------------------------------------
@@ -541,7 +553,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #149ddd;
+  color: #ffcccc;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -584,17 +596,17 @@ section {
   color: #fff;
   font-size: 28px;
   text-align: center;
-  background: rgba(20, 157, 221, 0.75);
+  background: #ffcccc;
   transition: 0.3s;
   width: 50%;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: rgba(20, 157, 221, 0.95);
+  background: #ffcccc;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a+a {
-  border-left: 1px solid #37b3ed;
+  border-left: 1px solid #ffcccc;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -631,11 +643,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #149ddd;
+  border: 1px solid #ffcccc;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #149ddd;
+  background-color: #ffcccc;
 }
 
 .portfolio-details .portfolio-info {
@@ -689,10 +701,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #149ddd;
+  background: #ffcccc;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #149ddd;
+  border: 1px solid #ffcccc;
 }
 
 .services .icon i {
@@ -706,7 +718,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #149ddd;
+  color: #ffcccc;
 }
 
 .services .title {
@@ -721,7 +733,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #149ddd;
+  color: #ffcccc;
 }
 
 .services .description {
@@ -815,207 +827,13 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #149ddd;
+  border: 1px solid #ffcccc;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #149ddd;
+  background-color: #ffcccc;
 }
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
-.contact {
-  padding-bottom: 130px;
-}
-
-.contact .info {
-  padding: 30px;
-  background: #fff;
-  width: 100%;
-  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
-}
-
-.contact .info i {
-  font-size: 20px;
-  color: #149ddd;
-  float: left;
-  width: 44px;
-  height: 44px;
-  background: #dff3fc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  transition: all 0.3s ease-in-out;
-}
-
-.contact .info h4 {
-  padding: 0 0 0 60px;
-  font-size: 22px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  color: #050d18;
-}
-
-.contact .info p {
-  padding: 0 0 10px 60px;
-  margin-bottom: 20px;
-  font-size: 14px;
-  color: #173b6c;
-}
-
-.contact .info .email p {
-  padding-top: 5px;
-}
-
-.contact .info .social-links {
-  padding-left: 60px;
-}
-
-.contact .info .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: #333;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-  margin-right: 10px;
-}
-
-.contact .info .social-links a:hover {
-  background: #149ddd;
-  color: #fff;
-}
-
-.contact .info .email:hover i,
-.contact .info .address:hover i,
-.contact .info .phone:hover i {
-  background: #149ddd;
-  color: #fff;
-}
-
-.contact .php-email-form {
-  width: 100%;
-  padding: 30px;
-  background: #fff;
-  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
-}
-
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form .form-group {
-  margin-bottom: 15px;
-}
-
-.contact .php-email-form label {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input {
-  height: 44px;
-}
-
-.contact .php-email-form textarea {
-  padding: 10px 15px;
-}
-
-.contact .php-email-form button[type=submit] {
-  background: #149ddd;
-  border: 0;
-  padding: 10px 24px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 4px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: #37b3ed;
-}
-
-@-webkit-keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -1076,7 +894,7 @@ section {
   bottom: 0;
   width: 300px;
   z-index: 9999;
-  background: #040b14;
+  background: rgba(49, 25, 19);
   margin-left: 80px;
 }
 
