--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,14 +327,29 @@ section {
   left: 0;
 }
 
-.section-title p {
-  margin-bottom: 0;
-  font-size: ;
-  font-family: ;
-}
 
 .section-title-skill{
   padding-bottom: 5px;
+}
+
+.section-title-skill h2 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  color: #173b6c;
+}
+
+.section-title-skill h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: #149ddd;
+  bottom: 0;
+  left: 0;
 }
 
 /*--------------------------------------------------------------
