--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -975,3 +975,997 @@ section {
   background-color: #777777;
   border-radius: 10px;
 }
+
+/* flower petal animation */
+#flowerpetal_container {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+}
+
+#flowerpetal_container .flowerpetal {
+  position: absolute;
+  background-size: cover;
+  background-image: url("../img/flowerpetal.png"); 
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(0) {
+  animation-name: flowerpetal_container-0;
+  animation-delay: 1s;
+  animation-duration: 43s;
+  animation-iteration-count: infinite;
+  left: 37vw;
+  top: -22vh;
+  width: 9px;
+  height: 9px;
+}
+
+@keyframes flowerpetal_container-0 {
+  0% {
+      transform: rotate(0deg);
+      left: 37%;
+      top: -22%;
+  }
+
+  25% {
+      left: 42%;
+  }
+
+  50% {
+      left: 37%;
+  }
+
+  75% {
+      left: 32%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 34.5%;
+      transform: rotate(360deg);
+      top: 116%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(1) {
+  animation-name: flowerpetal_container-1;
+  animation-delay: 17s;
+  animation-duration: 32s;
+  animation-iteration-count: infinite;
+  left: 72vw;
+  top: -19vh;
+  width: 9px;
+  height: 9px;
+}
+
+@keyframes flowerpetal_container-1 {
+  0% {
+      transform: rotate(0deg);
+      left: 72%;
+      top: -19%;
+  }
+
+  25% {
+      left: 77%;
+  }
+
+  50% {
+      left: 72%;
+  }
+
+  75% {
+      left: 67%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 69.5%;
+      transform: rotate(360deg);
+      top: 113%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(2) {
+  animation-name: flowerpetal_container-2;
+  animation-delay: 4s;
+  animation-duration: 25s;
+  animation-iteration-count: infinite;
+  left: 21vw;
+  top: -32vh;
+  width: 8px;
+  height: 8px;
+}
+
+@keyframes flowerpetal_container-2 {
+  0% {
+      transform: rotate(0deg);
+      left: 21%;
+      top: -32%;
+  }
+
+  25% {
+      left: 26%;
+  }
+
+  50% {
+      left: 21%;
+  }
+
+  75% {
+      left: 16%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 18.5%;
+      transform: rotate(360deg);
+      top: 106%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(3) {
+  animation-name: flowerpetal_container-3;
+  animation-delay: 19s;
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+  left: 27vw;
+  top: -63vh;
+  width: 8px;
+  height: 8px;
+}
+
+@keyframes flowerpetal_container-3 {
+  0% {
+      transform: rotate(0deg);
+      left: 27%;
+      top: -63%;
+  }
+
+  25% {
+      left: 32%;
+  }
+
+  50% {
+      left: 27%;
+  }
+
+  75% {
+      left: 22%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 24.5%;
+      transform: rotate(360deg);
+      top: 101%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(4) {
+  animation-name: flowerpetal_container-4;
+  animation-delay: 0s;
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+  left: 20vw;
+  top: -19vh;
+  width: 17px;
+  height: 17px;
+}
+
+@keyframes flowerpetal_container-4 {
+  0% {
+      transform: rotate(0deg);
+      left: 20%;
+      top: -19%;
+  }
+
+  25% {
+      left: 25%;
+  }
+
+  50% {
+      left: 20%;
+  }
+
+  75% {
+      left: 15%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 17.5%;
+      transform: rotate(360deg);
+      top: 111%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(5) {
+  animation-name: flowerpetal_container-5;
+  animation-delay: 4s;
+  animation-duration: 34s;
+  animation-iteration-count: infinite;
+  left: 65vw;
+  top: -45vh;
+  width: 13px;
+  height: 13px;
+}
+
+@keyframes flowerpetal_container-5 {
+  0% {
+      transform: rotate(0deg);
+      left: 65%;
+      top: -45%;
+  }
+
+  25% {
+      left: 70%;
+  }
+
+  50% {
+      left: 65%;
+  }
+
+  75% {
+      left: 60%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 62.5%;
+      transform: rotate(360deg);
+      top: 102%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(6) {
+  animation-name: flowerpetal_container-6;
+  animation-delay: 4s;
+  animation-duration: 19s;
+  animation-iteration-count: infinite;
+  left: 17vw;
+  top: -53vh;
+  width: 18px;
+  height: 18px;
+}
+
+@keyframes flowerpetal_container-6 {
+  0% {
+      transform: rotate(0deg);
+      left: 17%;
+      top: -53%;
+  }
+
+  25% {
+      left: 22%;
+  }
+
+  50% {
+      left: 17%;
+  }
+
+  75% {
+      left: 12%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 14.5%;
+      transform: rotate(360deg);
+      top: 118%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(7) {
+  animation-name: flowerpetal_container-7;
+  animation-delay: 0s;
+  animation-duration: 47s;
+  animation-iteration-count: infinite;
+  left: 21vw;
+  top: -34vh;
+  width: 17px;
+  height: 17px;
+}
+
+@keyframes flowerpetal_container-7 {
+  0% {
+      transform: rotate(0deg);
+      left: 21%;
+      top: -34%;
+  }
+
+  25% {
+      left: 26%;
+  }
+
+  50% {
+      left: 21%;
+  }
+
+  75% {
+      left: 16%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 18.5%;
+      transform: rotate(360deg);
+      top: 114%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(8) {
+  animation-name: flowerpetal_container-8;
+  animation-delay: 4s;
+  animation-duration: 29s;
+  animation-iteration-count: infinite;
+  left: 25vw;
+  top: -19vh;
+  width: 8px;
+  height: 8px;
+}
+
+@keyframes flowerpetal_container-8 {
+  0% {
+      transform: rotate(0deg);
+      left: 25%;
+      top: -19%;
+  }
+
+  25% {
+      left: 30%;
+  }
+
+  50% {
+      left: 25%;
+  }
+
+  75% {
+      left: 20%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 22.5%;
+      transform: rotate(360deg);
+      top: 113%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(9) {
+  animation-name: flowerpetal_container-9;
+  animation-delay: 13s;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  left: 62vw;
+  top: -34vh;
+  width: 8px;
+  height: 8px;
+}
+
+@keyframes flowerpetal_container-9 {
+  0% {
+      transform: rotate(0deg);
+      left: 62%;
+      top: -34%;
+  }
+
+  25% {
+      left: 67%;
+  }
+
+  50% {
+      left: 62%;
+  }
+
+  75% {
+      left: 57%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 59.5%;
+      transform: rotate(360deg);
+      top: 103%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(10) {
+  animation-name: flowerpetal_container-10;
+  animation-delay: 9s;
+  animation-duration: 36s;
+  animation-iteration-count: infinite;
+  left: 1vw;
+  top: -40vh;
+  width: 10px;
+  height: 10px;
+}
+
+@keyframes flowerpetal_container-10 {
+  0% {
+      transform: rotate(0deg);
+      left: 1%;
+      top: -40%;
+  }
+
+  25% {
+      left: 6%;
+  }
+
+  50% {
+      left: 1%;
+  }
+
+  75% {
+      left: -4%;
+      opacity: 1;
+  }
+
+  100% {
+      left: -1.5%;
+      transform: rotate(360deg);
+      top: 101%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(11) {
+  animation-name: flowerpetal_container-11;
+  animation-delay: 19s;
+  animation-duration: 37s;
+  animation-iteration-count: infinite;
+  left: 12vw;
+  top: -59vh;
+  width: 14px;
+  height: 14px;
+}
+
+@keyframes flowerpetal_container-11 {
+  0% {
+      transform: rotate(0deg);
+      left: 12%;
+      top: -59%;
+  }
+
+  25% {
+      left: 17%;
+  }
+
+  50% {
+      left: 12%;
+  }
+
+  75% {
+      left: 7%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 9.5%;
+      transform: rotate(360deg);
+      top: 114%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(12) {
+  animation-name: flowerpetal_container-12;
+  animation-delay: 11s;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  left: 47vw;
+  top: -62vh;
+  width: 16px;
+  height: 16px;
+}
+
+@keyframes flowerpetal_container-12 {
+  0% {
+      transform: rotate(0deg);
+      left: 47%;
+      top: -62%;
+  }
+
+  25% {
+      left: 52%;
+  }
+
+  50% {
+      left: 47%;
+  }
+
+  75% {
+      left: 42%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 44.5%;
+      transform: rotate(360deg);
+      top: 117%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(13) {
+  animation-name: flowerpetal_container-13;
+  animation-delay: 0s;
+  animation-duration: 45s;
+  animation-iteration-count: infinite;
+  left: 30vw;
+  top: -50vh;
+  width: 9px;
+  height: 9px;
+}
+
+@keyframes flowerpetal_container-13 {
+  0% {
+      transform: rotate(0deg);
+      left: 30%;
+      top: -50%;
+  }
+
+  25% {
+      left: 35%;
+  }
+
+  50% {
+      left: 30%;
+  }
+
+  75% {
+      left: 25%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 27.5%;
+      transform: rotate(360deg);
+      top: 119%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(14) {
+  animation-name: flowerpetal_container-14;
+  animation-delay: 0s;
+  animation-duration: 33s;
+  animation-iteration-count: infinite;
+  left: 47vw;
+  top: -25vh;
+  width: 19px;
+  height: 19px;
+}
+
+@keyframes flowerpetal_container-14 {
+  0% {
+      transform: rotate(0deg);
+      left: 47%;
+      top: -25%;
+  }
+
+  25% {
+      left: 52%;
+  }
+
+  50% {
+      left: 47%;
+  }
+
+  75% {
+      left: 42%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 44.5%;
+      transform: rotate(360deg);
+      top: 114%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(15) {
+  animation-name: flowerpetal_container-15;
+  animation-delay: 10s;
+  animation-duration: 19s;
+  animation-iteration-count: infinite;
+  left: 66vw;
+  top: -21vh;
+  width: 9px;
+  height: 9px;
+}
+
+@keyframes flowerpetal_container-15 {
+  0% {
+      transform: rotate(0deg);
+      left: 66%;
+      top: -21%;
+  }
+
+  25% {
+      left: 71%;
+  }
+
+  50% {
+      left: 66%;
+  }
+
+  75% {
+      left: 61%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 63.5%;
+      transform: rotate(360deg);
+      top: 104%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(16) {
+  animation-name: flowerpetal_container-16;
+  animation-delay: 19s;
+  animation-duration: 43s;
+  animation-iteration-count: infinite;
+  left: 34vw;
+  top: -25vh;
+  width: 19px;
+  height: 19px;
+}
+
+@keyframes flowerpetal_container-16 {
+  0% {
+      transform: rotate(0deg);
+      left: 34%;
+      top: -25%;
+  }
+
+  25% {
+      left: 39%;
+  }
+
+  50% {
+      left: 34%;
+  }
+
+  75% {
+      left: 29%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 31.5%;
+      transform: rotate(360deg);
+      top: 105%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(17) {
+  animation-name: flowerpetal_container-17;
+  animation-delay: 19s;
+  animation-duration: 25s;
+  animation-iteration-count: infinite;
+  left: 53vw;
+  top: -54vh;
+  width: 13px;
+  height: 13px;
+}
+
+@keyframes flowerpetal_container-17 {
+  0% {
+      transform: rotate(0deg);
+      left: 53%;
+      top: -54%;
+  }
+
+  25% {
+      left: 58%;
+  }
+
+  50% {
+      left: 53%;
+  }
+
+  75% {
+      left: 48%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 50.5%;
+      transform: rotate(360deg);
+      top: 109%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(18) {
+  animation-name: flowerpetal_container-18;
+  animation-delay: 9s;
+  animation-duration: 24s;
+  animation-iteration-count: infinite;
+  left: 53vw;
+  top: -27vh;
+  width: 13px;
+  height: 13px;
+}
+
+@keyframes flowerpetal_container-18 {
+  0% {
+      transform: rotate(0deg);
+      left: 53%;
+      top: -27%;
+  }
+
+  25% {
+      left: 58%;
+  }
+
+  50% {
+      left: 53%;
+  }
+
+  75% {
+      left: 48%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 50.5%;
+      transform: rotate(360deg);
+      top: 100%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(19) {
+  animation-name: flowerpetal_container-19;
+  animation-delay: 9s;
+  animation-duration: 46s;
+  animation-iteration-count: infinite;
+  left: 5vw;
+  top: -48vh;
+  width: 12px;
+  height: 12px;
+}
+
+@keyframes flowerpetal_container-19 {
+  0% {
+      transform: rotate(0deg);
+      left: 5%;
+      top: -48%;
+  }
+
+  25% {
+      left: 10%;
+  }
+
+  50% {
+      left: 5%;
+  }
+
+  75% {
+      left: 0%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 2.5%;
+      transform: rotate(360deg);
+      top: 112%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(20) {
+  animation-name: flowerpetal_container-20;
+  animation-delay: 12s;
+  animation-duration: 18s;
+  animation-iteration-count: infinite;
+  left: 70vw;
+  top: -36vh;
+  width: 10px;
+  height: 10px;
+}
+
+@keyframes flowerpetal_container-20 {
+  0% {
+      transform: rotate(0deg);
+      left: 70%;
+      top: -36%;
+  }
+
+  25% {
+      left: 75%;
+  }
+
+  50% {
+      left: 70%;
+  }
+
+  75% {
+      left: 65%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 67.5%;
+      transform: rotate(360deg);
+      top: 100%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(21) {
+  animation-name: flowerpetal_container-21;
+  animation-delay: 0s;
+  animation-duration: 24s;
+  animation-iteration-count: infinite;
+  left: 48vw;
+  top: -37vh;
+  width: 11px;
+  height: 11px;
+}
+
+@keyframes flowerpetal_container-21 {
+  0% {
+      transform: rotate(0deg);
+      left: 48%;
+      top: -37%;
+  }
+
+  25% {
+      left: 53%;
+  }
+
+  50% {
+      left: 48%;
+  }
+
+  75% {
+      left: 43%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 45.5%;
+      transform: rotate(360deg);
+      top: 102%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(22) {
+  animation-name: flowerpetal_container-22;
+  animation-delay: 7s;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  left: 77vw;
+  top: -46vh;
+  width: 11px;
+  height: 11px;
+}
+
+@keyframes flowerpetal_container-22 {
+  0% {
+      transform: rotate(0deg);
+      left: 77%;
+      top: -46%;
+  }
+
+  25% {
+      left: 82%;
+  }
+
+  50% {
+      left: 77%;
+  }
+
+  75% {
+      left: 72%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 74.5%;
+      transform: rotate(360deg);
+      top: 100%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(23) {
+  animation-name: flowerpetal_container-23;
+  animation-delay: 10s;
+  animation-duration: 43s;
+  animation-iteration-count: infinite;
+  left: 62vw;
+  top: -27vh;
+  width: 18px;
+  height: 18px;
+}
+
+@keyframes flowerpetal_container-23 {
+  0% {
+      transform: rotate(0deg);
+      left: 62%;
+      top: -27%;
+  }
+
+  25% {
+      left: 67%;
+  }
+
+  50% {
+      left: 62%;
+  }
+
+  75% {
+      left: 57%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 59.5%;
+      transform: rotate(360deg);
+      top: 112%;
+      opacity: 0;
+  }
+}
+
+#flowerpetal_container .flowerpetal:nth-of-type(24) {
+  animation-name: flowerpetal_container-24;
+  animation-delay: 14s;
+  animation-duration: 35s;
+  animation-iteration-count: infinite;
+  left: 62vw;
+  top: -59vh;
+  width: 18px;
+  height: 18px;
+}
+
+@keyframes flowerpetal_container-24 {
+  0% {
+      transform: rotate(0deg);
+      left: 62%;
+      top: -59%;
+  }
+
+  25% {
+      left: 67%;
+  }
+
+  50% {
+      left: 62%;
+  }
+
+  75% {
+      left: 57%;
+      opacity: 1;
+  }
+
+  100% {
+      left: 59.5%;
+      transform: rotate(360deg);
+      top: 111%;
+      opacity: 0;
+  }
+}
+/* End flower petal animation */
